<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_all"
    android:paddingStart="30dp"
    android:paddingLeft="30sp"
    android:paddingEnd="30dp"
    android:paddingRight="30sp"
    tools:context=".activity.LoginActivity">



    <LinearLayout
        android:id="@+id/SelectLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:padding="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Language"
            android:textColor="@color/white"
            android:fontFamily="@font/lato_bold"
            android:textStyle="bold"
            android:textSize="14sp"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/ic_baseline_translate_24"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/SelectCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="4dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/Flag"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_globe"
            android:layout_marginEnd="4dp"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/countryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Country"
            android:textColor="@color/white"
            android:fontFamily="@font/lato_bold"
            android:textStyle="bold"
            android:textSize="14sp"
            android:drawablePadding="4dp" />

    </LinearLayout>


    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        app:layout_constraintTop_toBottomOf="@+id/SelectLanguage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/global_business_retail_partner"
        app:layout_constraintTop_toBottomOf="@+id/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:fontFamily="@font/lato_semi_bold"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>



    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/logintitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_semi_bold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        app:layout_constraintBottom_toTopOf="@+id/MedialLayout"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/MedialLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/Title"
        app:layout_constraintBottom_toTopOf="@+id/orTitle">



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/NumberInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:textColorHint="#757575"
            app:boxBackgroundColor="@color/back_all"
            app:hintTextColor="#757575"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.050000012"
            app:startIconDrawable="@drawable/ic_baseline_phone_iphone_24"
            tools:layout_editor_absoluteX="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/NumberInputLayout"
            app:passwordToggleEnabled="true"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            android:textColorHint="#757575"
            app:hintTextColor="#757575"
            app:boxBackgroundColor="@color/back_all"
            app:passwordToggleTint="#FFF"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textCursorDrawable="@drawable/color_cursor"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/remember_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PasswordInputLayout">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox"
                android:layout_width="34dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rememberme"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/forgotBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/remember_layout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/remember_layout">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/Forgot_Password"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_btn_design"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/remember_layout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/log_in"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>




    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/orTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/MedialLayout"
        app:layout_constraintBottom_toTopOf="@+id/SignUpBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/or"
        android:fontFamily="@font/lato_semi_bold"
        android:textColor="@color/white"/>

    <LinearLayout
        android:id="@+id/SignUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:paddingLeft="60dp"
        android:background="@drawable/login_btn_design"
        android:paddingRight="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/login_btn_design"
        tools:visibility="visible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>




























