<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.warranty.pending_replacement_request.PendingReplacementRequestFragment"
    android:background="@color/back_all"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingEnd="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/headtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pending_replace_process"
        android:fontFamily="@font/lato_black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/white"/>


    <LinearLayout
        android:id="@+id/DatpickerRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingTop="4dp"
        android:paddingRight="10dp"
        android:paddingBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/headtitle">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_calendar" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/ProcessingLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headtitle"
        app:layout_constraintEnd_toStartOf="@+id/DeliveredLayout"
        android:background="@drawable/red_order_status"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:layout_marginTop="25dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:fontFamily="@font/lato_semi_bold"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/DeliveredLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintEnd_toStartOf="@+id/CancelledLayout"
        app:layout_constraintTop_toTopOf="@+id/ProcessingLayout"
        app:layout_constraintBottom_toBottomOf="@+id/ProcessingLayout"
        app:layout_constraintStart_toEndOf="@+id/ProcessingLayout"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="4dp"
        android:background="@drawable/blac_order_status"
        android:paddingBottom="4dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Approved"
            android:fontFamily="@font/lato_semi_bold"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/CancelledLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/ProcessingLayout"
        app:layout_constraintBottom_toBottomOf="@+id/ProcessingLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="4dp"
        android:background="@drawable/blac_order_status"
        android:paddingBottom="4dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancelled"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:fontFamily="@font/lato_semi_bold"
            android:textColor="@color/white"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/PendingReplacementRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/ProcessingLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/noData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_not_found"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>




</androidx.constraintlayout.widget.ConstraintLayout>